# bike-obsessed-llm

./: .flake8  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  fly.toml  pyproject.toml  requirements.txt  test_interventions.py
.claude/: settings.json
.claude/prompts/: background-flashcards.md  ml-teacher.md  python-engineer.md
docs/flashcards/: llm-fundamentals.md  pad-token-methodology.md  repetition_penalties.md  torch-dtypes.md
docs/notes/: README.md
evals/bike_obsession/: __init__.py  bike_eval.py  bike_interventions.py  test_bike_interventions.py
examples/: batch_config.json  model_persistence_example.py
flashcards/: mechinterp-interventions.md
prompts/: background-flashcards.md  python-engineer.md
saved_models/bike_obsessed_distilgpt2/: bike_intervention_metadata.json  model.safetensors.index.json  ollama_conversion_guide.md
src/bike_obsessed_llm/: __init__.py  bike_obsess_bot.py  one_shot_prompt.py
src/bike_obsessed_llm/cli/: __init__.py  bike_cli.py
src/bike_obsessed_llm/evaluation/: __init__.py  bike_eval.py  comprehensive_bike_eval.py
src/bike_obsessed_llm/interventions/: __init__.py  bike_interventions.py
tests/: conftest.py  test_evaluation.py  test_interventions.py  test_interventions_integration.py
